zone-alloc-strong-handle-derive/tests/ui/unit_struct.rs
use zone_alloc_strong_handle_derive::StrongHandle;

#[derive(StrongHandle)]
struct IntegerHandle;

fn main() {}
